Fixing categories bug